# terminal_chat

./: .gitignore  CyberArena-MVP-PRD.md  LANCEMENT.md  prd.md
backend/: .dockerignore  .env.example  .env.prod.example  DEPLOY-HOSTINGER.md  DEPLOY.md  Dockerfile  README.md  dm_realtime_test.py  docker-compose.app.yml  docker-compose.prod.yml  docker-compose.yml  e2e_test.py  idle_ws_test.py  manage.py  requirements.txt
backend/accounts/: models.py  serializers.py  urls.py  urls_auth.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/deploy/: entrypoint.sh  init-letsencrypt.sh  nginx-host.conf  nginx.conf
backend/hanif/: asgi.py  settings.py  urls.py  wsgi.py
backend/relay/: asgi.py  settings.py  urls.py  wsgi.py
backend/releases/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/releases/migrations/: 0001_initial.py  (+1 more)
client/: BUILD.md  INSTALL.md  README.md  build.ps1  build_entry.py  conn_test.py  help_test.py  login_test.py  pyproject.toml  requirements.txt  snapshot.py  tui_test.py
client/hanif_cli/: __init__.py  api.py  app.py  app.tcss  cli.py  config.py  ws.py
client/installer/: hanif.iss  relay.iss
client/relay_cli/: __init__.py  api.py  app.py  cli.py  commands.py  config.py  messages.py  ui.py  ws.py
platform/: DEPLOY.md  README.md  angular.json  package-lock.json  package.json
platform/src/: index.html  styles.scss
platform/src/app/: app.html  (+4 more)
(+11 files in other folders)
