[project]
name = "relay-cli"
version = "0.2.3"
description = "Relay — messagerie temps réel dans le terminal"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "rich>=13.7",
    "httpx>=0.27",
    "websockets>=13.0",
    "typer>=0.12",
]

[project.scripts]
relay = "relay_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["relay_cli"]
